--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -12,6 +12,7 @@ psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
 python-multipart==0.0.20
 pytz==2025.2
 six==1.17.0
